--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -279,6 +279,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\AddMoney_ClientDetailForm.resx">
       <DependentUpon>AddMoney_ClientDetailForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\AddProductForm.resx">
       <DependentUpon>AddProductForm.cs</DependentUpon>
